updating old content

--- a/_posts/2017-03-11-PCA.md
+++ b/_posts/2017-03-11-PCA.md
@@ -5,7 +5,7 @@ date: 2017-03-11T19:59:42+05:30
 
 ## What is PCA?
 
-In simple words, PCA is a technique used to *condense* a large number of features into a smaller set of features that can *almost* represent the original set.
+In simple words, PCA is a technique used to _condense_ a large number of features into a smaller set of features that can _almost_ represent the original set.
 
 ## Why PCA?
 
@@ -13,7 +13,7 @@ In simple words, PCA is a technique used to *condense* a large number of feature
 
 As the number of features increase in a dataset, the amount of data needed to draw meaningful insights increases exponentially.
 
-This is called *"Curse of dimensionality"*. [Here is a video](https://www.youtube.com/watch?v=QZ0DtNFdDko) that explains this in simple terms.
+This is called _"Curse of dimensionality"_. [Here is a video](https://www.youtube.com/watch?v=QZ0DtNFdDko) that explains this in simple terms.
 
 PCA is a technique used to reduce diemnsions (or number of features).
 
@@ -33,9 +33,9 @@ The line Z is the the 1D representation of the 2D dataset.
 
 Similar to the line Z, there are other such lines, orthogonal to each other onto which points in the space can be projected.
 
-Each of these lines capture the spatial information with varying degrees of accuracy. 
+Each of these lines capture the spatial information with varying degrees of accuracy.
 
-In the image below we want to pick e to maximize variability. i.e., the <span style="color:#5f5fff"> **purple** </span> line captures the variability among points better than the <span style="color:green"> **green** </span> line 
+In the image below we want to pick e to maximize variability. i.e., the <span style="color:#5f5fff"> **purple** </span> line captures the variability among points better than the <span style="color:green"> **green** </span> line
 
 <a href='http://www.inf.ed.ac.uk/teaching/courses/iaml/slides/dim-2x2.pdf'><img class="special-img-class" style="max-width:400px; max-height:450px" src="/img/pca/PCA1.png" /></a>
 
@@ -70,14 +70,14 @@ Pick **K** eigenvectors that explain 90% or more of the total variance, using th
 
 <a href='http://www.inf.ed.ac.uk/teaching/courses/iaml/slides/dim-2x2.pdf'><img class="special-img-class" style="max-width:400px; max-height:450px" src="/img/pca/explained_variance_pca.png" /></a>
 
-Typical threshold values are 0.9 or 0.95. 
+Typical threshold values are 0.9 or 0.95.
 We could set a explained variance threshold as high as 0.99 if we want to capture the original data with higher accuracy in the compressed representation.
 
 ## Reconstructing data from PCA:
 
-Let **X<sub>raw</sub>** be the *n×p* data matrix with *n* rows (data points) and *p* columns (variables, or features). After subtracting the mean vector *μ* from each row, we get the centered data matrix **X**. 
+Let **X<sub>raw</sub>** be the _n×p_ data matrix with _n_ rows (data points) and _p_ columns (variables, or features). After subtracting the mean vector _μ_ from each row, we get the centered data matrix **X**.
 
-Let **V** be the *p×k* matrix of some **K** eigenvectors that we want to use; these would most often be the **K** eigenvectors with the largest eigenvalues. Then the *n×k* matrix of PCA projections ("scores"
+Let **V** be the _p×k_ matrix of some **K** eigenvectors that we want to use; these would most often be the **K** eigenvectors with the largest eigenvalues. Then the _n×k_ matrix of PCA projections ("scores"
 will be simply given by **Z=XV**.
 
 The reconstruction of the original data from Z is given by
@@ -86,8 +86,8 @@ X̂raw = ZVT + μ
 
 ## Advice for applying PCA
 
-1. **Perform feature scaling** if the range of values for different features vary greatly. 
-Larger numbers are likely to have higher variance which can overwhelm the algorithm since we use PCs from the data's covariance matrix.
+1. **Perform feature scaling** if the range of values for different features vary greatly.
+   Larger numbers are likely to have higher variance which can overwhelm the algorithm since we use PCs from the data's covariance matrix.
 
 2. **Don't include PCA as a default step** in an ML system design. Only apply PCA if the training doesn't work well with the original large feature set.
 
